--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "start": "nodemon ./bin/www",
     "build": "babel src -d dist",
     "build:watch": "npm run build -- --watch",
-    "test": "mocha --recursive --watch --require babel-register "
+    "test": "mocha --recursive --require babel-register "
   },
   "repository": {
     "type": "git",
